# No-Code-AI-Agent_Repo

./: AGENTS.md  README.md  pyproject.toml  quickstart.md  rag_engine.py  run_demo.py
.github/workflows/: security_scan.yml  validation.yml
agents/binarization_optimization_agent/: agent.json  system_prompt.md
agents/competitive_intelligence_agent/: agent.json  system_design.md
agents/compliance_agent/: agent.json
agents/content_generator_agent/: agent.json  system_prompt.md
agents/customer_support_agent/: agent.json  system_prompt.md
agents/data_quality_agent/: agent.json  system_prompt.md
agents/dataset_augmentation_agent/: agent.json  system_prompt.md
agents/document q&a agent/: agent.json  system_prompt.md
code_modules/: config.py
docs/: 01_agents.md  02_workflows.md  03_memory.md  04_tools.md  05_routing.md  06_prompts.md  07_guardrails.md  08_human_review.md  09_evaluation.md  10_monitoring.md  11_security.md  12_multi_agent.md  13_deployment.md  14_cost_optimization.md  15_best_practices.md  16_common_failures.md  17_agent_economics.md  architecture.md  framework_vs_greenscale.md  getting-started.md  overview.md
examples/: README.md
knowledge/: mission_statement.md
tests/: rest_routing_behavior.py  test_repo_files.py  test_routing_behavior.py  test_routing_coverage.py  test_validation_errors.py
tools/: core_webhooks.json  python_executors.json
workflows/: engineer.py  error_handling.py  human_review.py  router.py  run_workflow_demo.py  support_to_lead.json  support_to_lead.py  tool_runner.py  workflow_registry.py  workflow_state.py
(+426 files in other folders)
